fix inspector remove previous instances change to overflow auto

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,7 +127,7 @@ body {
   .inspector-container {
     right: 15px;
     bottom: 20px;
-    overflow: hidden;
+    overflow: auto;
   }
 
   .joint-inspector {
